<resources>
    <string name="app_name" translatable="false">相片微件</string>
    <string name="vertical_padding" translatable="false">上下边距</string>
    <string name="horizontal_padding" translatable="false">左右边距</string>
    <string name="top_padding">上边距\u3000</string>
    <string name="bottom_padding">下边距\u3000</string>
    <string name="left_padding">左边距\u3000</string>
    <string name="right_padding">右边距\u3000</string>
    <string name="widget_radius" translatable="false">微件圆角</string>
    <string name="select_picture" translatable="false">选择图片</string>
    <string name="warning_select_picture" translatable="false">请选择一张照片</string>
    <string name="confirm" translatable="false">确定</string>
    <string name="text_photo" translatable="false">相片</string>
    <string name="switch_auto_play" translatable="false">自动播放</string>
    <string name="auto_play_interval" translatable="false">播放间隔</string>
    <string name="auto_play_interval_empty" translatable="false">无（可以点击左右边缘进行切换）</string>
    <string name="auto_play_interval_content" translatable="false">%s 秒</string>
    <string name="widget_re_edit">是否可以再次编辑</string>
    <string name="widget_open_url">相片链接</string>
    <string name="widget_open_url_help_text">支持 http/https 链接，以及 URL Scheme</string>
    <string name="warn_url_empty">URL不能为空</string>
    <string name="alert_title_interval">请选择播放间隔</string>
    <string name="alert_title_link_type">请选择链接类型</string>
    <string name="search">搜索</string>
    <string name="system_apps">显示系统应用</string>
    <string name="widget_image">微件图片</string>
    <string name="retry">重试</string>
    <string name="delete">删除</string>
    <string name="alert_title_default">提示</string>
    <string name="alert_msg_delete_widget">是否删除该微件？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="tips_widget_empty">请在桌面添加相片微件</string>
    <string name="click_to_refresh">点击刷新</string>
    <string name="add_widget_link">添加微件链接</string>
    <string name="delete_widget_link">删除微件链接</string>
    <string name="app_icon">应用图标</string>
    <string name="option_icon">选项图标</string>
    <string name="delete_photo">删除相片</string>
    <string name="widget_photo">微件相片</string>
    <string name="wallpaper">壁纸</string>
    <string name="widget_transparency">透明度\u3000</string>
    <string name="photo_scale_type">相片位置</string>
    <string name="alert_title_scale_type">请选择相片位置</string>
    <string-array name="open_link_types">
        <item>打开应用</item>
        <item>打开URL</item>
    </string-array>
    <string name="crop_freestyle_enable">自由裁剪已开启</string>
    <string name="crop_freestyle_disable">自由裁剪已关闭</string>
    <string name="processing">处理中…</string>
    <string name="saving">保存中…</string>
    <string name="add_widget">添加微件</string>
    <string name="edit_widget">编辑微件</string>
    <string name="about_version">版本：%s</string>
    <string name="about_title_introduction">介绍</string>
    <string name="about_introduction">一款相片小组件应用，可添加多张相片，可以打开应用、链接，支持图片裁剪、组件圆角以及边距调整。</string>
    <string name="about_title_developer">开发者</string>
    <string name="about_developer_name">齐欢</string>
    <string name="about_developer_github">https://github.com/qihuan92</string>
    <string name="about_developer_coolapk_profile_url">http://www.coolapk.com/u/3588942</string>
    <string name="about_app_coolapk_app_url">https://www.coolapk.com/apk/com.qihuan.photowidget</string>
    <string name="about_title_open_source_licenses">开源协议</string>
    <string name="about">关于</string>
    <string name="about_title_open_source_url">项目地址</string>
    <string name="about_open_source_url">https://github.com/qihuan92/PhotoWidget</string>
    <string name="about_title_link_coolapk">酷安</string>
    <string name="about_title_link_github">GitHub</string>
    <string name="about_title_link_weibo">微博</string>
    <string name="about_title_link_telegram">Telegram</string>
    <string name="about_developer_weibo">https://weibo.com/qihuan86</string>
    <string name="about_developer_telegram">https://t.me/qihuan92</string>
    <string name="item_selection_dialog_title">请选择</string>
    <string name="conform_delete_photo_link">是否删除相片链接</string>
    <string name="conform_delete_photo">是否删除该图片</string>
    <string name="loading">加载中…</string>
    <string name="tip_add_widget_title">如何添加相片微件</string>
    <string name="tip_add_widget_content">1. 触摸并按住主屏幕\n2. 在微件列表中找到相片微件\n3. 将相片微件拖拽到主屏幕上\n4. 添加照片并进行配置，点击右上角确定按钮</string>
    <string name="tip_ignore_battery_optimizations_title">关闭电池优化</string>
    <string name="tip_ignore_battery_optimizations_content">相片微件轮播控件使用了后台服务。如果您遇到相片微件不断消失，请考虑关闭电池优化</string>
    <string name="ignore_battery_optimizations_setting">设置</string>
    <string name="ignore_tip">不再提示</string>
    <string name="installed_app_page_title">选择应用</string>
    <string name="about_developer_introduction">https://qihuan92.github.io</string>
    <string name="force_refresh_widget">强制刷新</string>
    <string name="alert_msg_force_refresh_widget">如果您遇到相片微件消失等显示异常的问题，可通过此功能刷新所有微件</string>
    <string name="alert_title_force_refresh_widget">刷新微件</string>
    <string name="alert_positive_btn">刷新</string>
    <string name="background_task_notification_channel_id">background_task</string>
    <string name="background_task_channel_name">后台任务</string>
    <string name="force_refresh_widget_notification_title">强制刷新微件</string>
    <string name="force_refresh_widget_cancel_processing">取消</string>
    <string name="widget_link_open_album_title">打开相册</string>
    <string name="widget_link_open_album_description">在相册中显示当前照片</string>
    <string name="widget_link_open_file_title">打开文件</string>
    <string name="widget_link_open_file_description">打开文件: %s</string>
    <string name="widget_link_open_folder_title">打开文件夹</string>
    <string name="widget_link_open_folder_description">打开文件夹: %s</string>
    <string name="add_widget_photo">添加图片</string>
    <string name="widget_preview">微件预览</string>
    <string name="widget_item_gif_tag">GIF标签</string>
    <string name="save_widget_error_gif">保存失败：GIF解析错误</string>
    <string name="settings">设置</string>
    <string name="auto_refresh_widget">自动刷新微件</string>
    <string name="auto_refresh_widget_description">可定时刷新所有微件，需要开启后台运行</string>
    <string name="auto_refresh_widget_interval_description">%s刷新一次</string>
    <string name="settings_general">常规</string>
    <string name="clean_cache">清除缓存</string>
    <string name="clean_cache_description">清除图片缓存和临时数据</string>
    <string name="about_description">应用信息与开发者信息</string>
    <string name="settings_other">其他</string>
    <string name="alert_title_auto_refresh_interval">请选择自动刷新间隔</string>
    <string name="alert_title_radius_unit">请选择圆角单位</string>
    <string name="default_radius_unit">默认圆角单位</string>
    <string name="default_radius">默认圆角</string>
    <string name="radius_unit_description">可点击条目选择圆角单位</string>
    <string name="default_scale_type">默认相片位置</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="widget_background">微件背景</string>
    <string name="add_widget_frame">添加微件相框</string>
    <string name="delete_widget_frame">删除微件相框</string>
    <string name="preview_widget_frame">相框预览</string>
    <string name="widget_frame">相框</string>
    <string name="widget_frame_color_dialog_title">请选择颜色</string>
    <string name="save_fail_frame_file_not_exists">保存失败，请重新选择相框</string>
    <string name="save_fail">保存失败，请重试</string>
    <string name="save_fail_copy_photo_files">相片文件保存失败，请重试</string>
    <string name="multi_gif_widget_unsupported">抱歉，暂不支持添加多个GIF图片</string>
    <string name="link_type_open_app">打开应用</string>
    <string name="link_type_open_url">打开URL</string>
    <string name="link_type_open_album">打开相册</string>
    <string name="link_type_open_file">打开文件</string>
    <string name="scale_type_center_crop">中心裁剪</string>
    <string name="scale_type_fit_center">居中展示</string>
    <string name="play_interval_none">关闭（可以点击左右边缘进行切换）</string>
    <string name="play_interval_none_simple">关闭</string>
    <string name="play_interval_three_seconds">3秒</string>
    <string name="play_interval_five_seconds">5秒</string>
    <string name="play_interval_ten_seconds">10秒</string>
    <string name="play_interval_thirty_seconds">30秒</string>
    <string name="radius_unit_angle">角度(°)</string>
    <string name="radius_unit_length">长度(dp)</string>
    <string name="auto_refresh_interval_none">关闭</string>
    <string name="auto_refresh_interval_day">每天</string>
    <string name="auto_refresh_interval_twelve_hours">每12小时</string>
    <string name="auto_refresh_interval_hour">每小时</string>
    <string name="auto_refresh_interval_fifteen_minutes">每15分钟</string>
</resources>