<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardView.MainTip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_ignore_battery_optimizations_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tip_ignore_battery_optimizations_title"
            android:textAppearance="?textAppearanceHeadline6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ignore_battery_optimizations_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tip_ignore_battery_optimizations_content"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintLeft_toLeftOf="@id/tv_ignore_battery_optimizations_title"
            app:layout_constraintRight_toRightOf="@id/tv_ignore_battery_optimizations_title"
            app:layout_constraintTop_toBottomOf="@id/tv_ignore_battery_optimizations_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ignore_battery_optimizations"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginEnd="16dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/ignore_battery_optimizations_setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ignore_battery_optimizations_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>