<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/colorDivider"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_picture_prev"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/ShapeRound" />

                <Button
                    android:id="@+id/btn_select_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/select_picture" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/colorDivider"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/vertical_padding" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_vertical_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="20" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/colorDivider"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/horizontal_padding" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_horizontal_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="20" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/colorDivider"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/widget_radius" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_widget_radius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="20" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/confirm" />
    </LinearLayout>
</ScrollView>